<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="#EBEBEB">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txClinicName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/oxiHealth"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/txDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_750_m"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/txDistance"
                app:layout_constraintTop_toBottomOf="@+id/txDistance"
                app:srcCompat="@drawable/ic_location"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/txLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locations"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/txCreatedFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_min"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_340_r_s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txCreatedFrom" />

            <Button
                android:id="@+id/btnBook"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/book"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnNegotiate"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNegotiate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F28484"
                android:text="@string/negotiate"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/btnBook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnBook" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/txClinicName"
                app:layout_constraintTop_toBottomOf="@+id/txClinicName"
                app:srcCompat="@drawable/ic_star"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/txRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/rate"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>